--- a/JS StopWatch/style/style.css
+++ b/JS StopWatch/style/style.css
@@ -12,11 +12,25 @@ html {
   min-height: 100vh;
 }
 
-main {
+body {
   min-height: 100vh;
+}
+
+main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 50%;
-  margin: 0 auto;
+  height: 50%;
   color: #fff;
+}
+
+#title {
+  text-align: center;
+  font-size: 8rem;
+  font-family: sans-serif;
 }
 
 #wrapper,
@@ -34,7 +48,22 @@ main {
           align-items: center;
 }
 
+#wrapper {
+  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5rem;
+}
+
+#wrapper h3,
+#wrapper span {
+  font-size: 6rem;
+  font-family: sans-serif;
+}
+
 .btn {
+  margin-top: 5rem;
   border: 3px white solid;
   border-radius: 12px;
   text-decoration: none;
@@ -42,6 +71,7 @@ main {
   padding: 0.5rem 2rem;
   cursor: pointer;
   color: #fff;
+  font-size: 4rem;
 }
 
 .btn i {
