--- a/JS StopWatch/style/style.css
+++ b/JS StopWatch/style/style.css
@@ -80,4 +80,9 @@ main {
   pointer-events: none;
   cursor: pointer;
 }
+
+.nr-wr {
+  width: 10rem;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
