--- a/weather-app/style/style.css
+++ b/weather-app/style/style.css
@@ -358,6 +358,6 @@ footer {
   border-radius: 0 0 0 1rem;
   cursor: pointer;
   background: #37afff;
-  color: white;
+  color: #faf8f8;
 }
 /*# sourceMappingURL=style.css.map */
